# LifeSort

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKELETON.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
crates/ls-cli/: Cargo.toml
crates/ls-cli/src/: main.rs
crates/ls-core/: Cargo.toml
crates/ls-core/src/: lib.rs
crates/ls-core/src/ai/: mod.rs  ollama.rs  prompts.rs
crates/ls-core/src/classifier/: document.rs  download.rs  mod.rs  pdf.rs  photo.rs
crates/ls-core/src/db/: mod.rs  queries.rs
crates/ls-core/src/db/migrations/: 0001_files.sql  0002_actions.sql
crates/ls-core/src/dedup/: hasher.rs  mod.rs
crates/ls-core/src/models/: action.rs  classification.rs  duplicate.rs  file_entry.rs  mod.rs
crates/ls-core/src/organizer/: mod.rs  rules.rs
crates/ls-core/src/plugin/: mod.rs
crates/ls-core/src/scanner/: metadata.rs  mod.rs
crates/ls-core/src/watcher/: mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Dashboard/: Dashboard.tsx
frontend/src/components/Duplicates/: DuplicatesView.tsx
frontend/src/components/FileGrid/: FileGrid.tsx
frontend/src/components/Organizer/: OrganizerView.tsx
frontend/src/components/Settings/: SettingsView.tsx
frontend/src/lib/: i18n.ts  tauri.ts
frontend/src/stores/: actionStore.ts  scanStore.ts  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: classify.rs  dedup.rs  mod.rs  organize.rs  scanner.rs  settings.rs  stats.rs  watcher.rs
