[workspace]
resolver = "2"
members = ["crates/ls-core", "crates/ls-cli", "src-tauri"]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Rafael Yilmaz <rafael.yilmaz@icloud.com>"]
license = "MIT"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
chrono      = { version = "0.4", features = ["serde"] }
uuid        = { version = "1", features = ["v4"] }
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"
reqwest     = { version = "0.12", features = ["json", "multipart", "stream"] }
sqlx        = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate"] }
dirs        = "5"
keyring     = "3"
once_cell   = "1"
regex       = "1"
dashmap     = "6"
