[package]
name    = "lifesort-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lifesort_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ls-core = { path = "../crates/ls-core" }
serde.workspace     = true
serde_json.workspace = true
tokio.workspace     = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
tracing-subscriber  = "0.3"
dirs.workspace      = true
keyring.workspace   = true
uuid.workspace      = true

tauri         = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs    = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
