[package]
name    = "ls-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lifesort"
path = "src/main.rs"

[dependencies]
ls-core = { path = "../ls-core" }
serde.workspace     = true
serde_json.workspace = true
tokio.workspace     = true
anyhow.workspace    = true
clap = { version = "4", features = ["derive"] }
