[package]
name    = "ls-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace     = true
serde_json.workspace = true
tokio.workspace     = true
chrono.workspace    = true
uuid.workspace      = true
thiserror.workspace = true
anyhow.workspace    = true
tracing.workspace   = true
reqwest.workspace   = true
sqlx.workspace      = true
dirs.workspace      = true
keyring.workspace   = true
once_cell.workspace = true
regex.workspace     = true
dashmap.workspace   = true

infer    = "0.16"
blake3   = "1"
walkdir  = "2"
rayon    = "1"
base64   = "0.22"
image    = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "tiff"] }
kamadak-exif = "0.5"
lopdf    = "0.36"
mime_guess = "2"
notify              = "6"
notify-debouncer-full = "0.3"
async-trait = "0.1"
